@@ -1,3 +1,6 @@
+Nov 15, 2023
+  CurationDafGenerator - updated to schema 1.11.0
+
 Nov 14, 2023
   CurationAlleleGenerator - updated to schema 1.11.0
 
